.opsera-chatgptsperi6/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: opsera-chatgptsperi6-dev
  labels:
    app: chatgptsperi6
    tenant: opsera
