.opsera-chatgptsperi6/k8s/base/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatgptsperi6-backend
  labels:
    app: chatgptsperi6
    component: backend
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
  selector:
    app: chatgptsperi6
    component: backend
